fix(image): remove weird spacing at bottom of images

--- a/components/image-composition/image-composition.less
+++ b/components/image-composition/image-composition.less
@@ -49,6 +49,8 @@
 .teamimage-container-image,
 .teamimage-container-person-image  {
 	width: 100%;
+	
+	display: block;
 }
 
 .teamimage-container-text-title {
